--- a/app/src/main/res/layout-xlarge/fragment_home.xml
+++ b/app/src/main/res/layout-xlarge/fragment_home.xml
@@ -21,7 +21,6 @@
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 app:layout_collapseMode="parallax"
-
                 android:background="@color/colorbgHome"
                 android:layout_height="?attr/actionBarSize"/>
             <TextView
@@ -59,9 +58,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorWhite"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp">
+            android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -69,93 +66,99 @@
                 android:textColor="@color/colorHitam"
                 android:fontFamily="@font/roboto"
                 android:textSize="20sp"
-                android:layout_margin="10dp"
-
                 android:layout_marginTop="20dp"
-                />
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="15dp">
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_peraturan"
+                    android:layout_width="200dp"
                     android:layout_height="90dp"
-                    android:layout_width="170dp"
-                    app:cardElevation="0dp"
-                    app:cardCornerRadius="5dp">
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp">
+
                     <FrameLayout
-                        android:background="@drawable/border"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:background="@drawable/border">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="10dp"
-                            android:orientation="horizontal"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:scaleType="fitXY"
-                                android:background="@color/gray"/>
+                                android:background="@color/gray"
+                                android:scaleType="fitXY" />
+
                             <TextView
-                                android:layout_width="match_parent"
-                                android:maxWidth="30dp"
+                                android:layout_width="65dp"
                                 android:layout_height="wrap_content"
-                                android:text="Pengaturan Dan Pasal"
                                 android:layout_margin="10dp"
-                                android:textSize="12sp"
-                                android:maxLines="2"
                                 android:layout_marginEnd="32dp"
                                 android:layout_marginRight="32dp"
+                                android:fontFamily="@font/roboto"
+                                android:maxLines="2"
+                                android:text="Peraturan dan Pasal"
                                 android:textColor="@color/colorHitam"
-                                android:fontFamily="@font/roboto"/>
+                                android:textSize="12sp" />
                         </LinearLayout>
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
-                <androidx.cardview.widget.CardView
 
+                <androidx.cardview.widget.CardView
                     android:id="@+id/menu_pelanggaran"
+                    android:layout_width="200dp"
                     android:layout_height="90dp"
-                    android:layout_width="170dp"
-                    app:cardElevation="0dp"
-                    app:cardCornerRadius="5dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
-                    android:background="@color/colorWhite">
+                    android:background="@color/colorWhite"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp">
+
                     <FrameLayout
-                        android:background="@drawable/border"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:background="@drawable/border">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_margin="10dp"
-                            android:orientation="horizontal"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:scaleType="fitXY"
-                                android:background="@color/gray"/>
+                                android:background="@color/gray"
+                                android:scaleType="fitXY" />
+
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="65dp"
                                 android:layout_height="wrap_content"
-                                android:text="Daftar Point Pelanggaran"
                                 android:layout_margin="10dp"
-                                android:textSize="12sp"
-                                android:maxLines="2"
                                 android:layout_marginEnd="32dp"
                                 android:layout_marginRight="32dp"
+                                android:fontFamily="@font/roboto"
+                                android:maxLines="2"
+                                android:text="Daftar Point Pelanggaran"
                                 android:textColor="@color/colorHitam"
-                                android:fontFamily="@font/roboto"/>
+                                android:textSize="12sp" />
                         </LinearLayout>
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
@@ -164,88 +167,93 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp">
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp">
+
                 <androidx.cardview.widget.CardView
-
                     android:id="@+id/menu_daftar_kelas"
+                    android:layout_width="200dp"
                     android:layout_height="90dp"
-                    android:layout_width="170dp"
-                    app:cardElevation="0dp"
-                    android:layout_marginTop="10dp"
-                    app:cardCornerRadius="5dp">
-                    <FrameLayout
-                        android:background="@drawable/border"
-                        android:layout_width="match_parent"
+                    android:layout_marginTop="15dp"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp">
 
-                        android:layout_height="match_parent">
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/border">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_margin="10dp"
-                            android:orientation="horizontal"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:scaleType="fitXY"
-                                android:background="@color/gray"/>
+                                android:background="@color/gray"
+                                android:scaleType="fitXY" />
+
                             <TextView
-                                android:layout_width="match_parent"
-                                android:maxWidth="30dp"
+                                android:layout_width="65dp"
                                 android:layout_height="wrap_content"
-                                android:text="Lihat Daftar Kelas"
                                 android:layout_margin="10dp"
-                                android:textSize="12sp"
-                                android:maxLines="2"
                                 android:layout_marginEnd="32dp"
                                 android:layout_marginRight="32dp"
+                                android:fontFamily="@font/roboto"
+                                android:maxLines="2"
+                                android:text="Lihat Daftar Kelas"
                                 android:textColor="@color/colorHitam"
-                                android:fontFamily="@font/roboto"/>
+                                android:textSize="12sp" />
                         </LinearLayout>
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/menu_lainya"
+                    android:layout_width="200dp"
                     android:layout_height="90dp"
-                    android:layout_width="170dp"
-                    app:cardElevation="0dp"
-                    android:layout_marginTop="10dp"
-                    app:cardCornerRadius="5dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
-                    android:background="@color/colorWhite">
+                    android:layout_marginTop="15dp"
+                    android:background="@color/colorWhite"
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="0dp">
+
                     <FrameLayout
-                        android:background="@drawable/border"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:background="@drawable/border">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_margin="10dp"
-                            android:orientation="horizontal"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:scaleType="fitXY"
-                                android:background="@color/gray"/>
+                                android:background="@color/gray"
+                                android:scaleType="fitXY" />
+
                             <TextView
-                                android:layout_width="match_parent"
-                                android:maxWidth="30dp"
+                                android:layout_width="65dp"
                                 android:layout_height="wrap_content"
-                                android:text="Lainnya"
                                 android:layout_margin="10dp"
-                                android:textSize="12sp"
-                                android:maxLines="2"
                                 android:layout_marginEnd="32dp"
                                 android:layout_marginRight="32dp"
+                                android:fontFamily="@font/roboto"
+                                android:maxLines="2"
+                                android:text="Lainya"
                                 android:textColor="@color/colorHitam"
-                                android:fontFamily="@font/roboto"/>
+                                android:textSize="12sp" />
                         </LinearLayout>
                     </FrameLayout>
                 </androidx.cardview.widget.CardView>
@@ -261,12 +269,46 @@
                     android:layout_height="match_parent"
                     android:text="@string/aktivitas_terbaru"
                     android:fontFamily="@font/roboto"
-                    android:layout_margin="10dp"
                     android:textSize="20sp"
                     android:textColor="@color/colorHitam"
                     android:layout_marginLeft="20dp"
                     android:layout_marginStart="20dp"/>
-
+                <ImageView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
+                <ImageView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
+                <ImageView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
+                <ImageView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
+                <ImageView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
+                <ImageView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:src="@drawable/test"
+                    android:scaleType="fitXY"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_aktivitas_new"
                     android:layout_width="match_parent"
